# CMake

Modules/Platform/: Windows-MSVC.cmake
Source/: CMakeLists.txt  cmGlobalVisualStudio11Generator.cxx  cmGlobalVisualStudio11Generator.h  cmGlobalVisualStudio12Generator.cxx  cmGlobalVisualStudio12Generator.h  cmLocalVisualStudio10Generator.cxx  cmTarget.cxx  cmVisualStudio10TargetGenerator.cxx  cmVisualStudio10TargetGenerator.h  cmVisualStudio11MultiPlatformTargetGenerator.cxx  cmVisualStudio11MultiPlatformTargetGenerator.h
Tests/VSMultiPlatform/: CMakeLists.txt
Tests/VSMultiPlatform/CppAppWin32/: CMakeLists.txt
Tests/VSMultiPlatform/CppStaticLib/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h
Tests/VSWindowsPhone8/ComponentLink/: CMakeLists.txt
Tests/VSWindowsPhone8/ComponentLink/StaticLib1/: CMakeLists.txt  MathFunctions.cpp  MathFunctionsStaticLib.h
Tests/VSWindowsPhone8/ComponentLink/WinRtTopLevelComponent/: CMakeLists.txt  tutorial.cxx
Tests/VSWindowsPhone8/ComponentLink/WinRtWp8Component1/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h
Tests/VSWindowsPhone8/ComponentLink/WinRtWp8Component2/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h
